# weechat-discord

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  find_token.py  rustfmt.toml
.github/workflows/: ci.yml
parsing/: Cargo.toml
parsing/src/: lib.rs
src/: buffers.rs  channel.rs  channel_buffer.rs  config.rs  debug.rs  format.rs  guild.rs  guild_buffer.rs  hook.rs  instance.rs  lib.rs  main.rs  message_renderer.rs  nicklist.rs  refcell.rs  weecord_renderer.rs
src/buffer/: channel.rs  channel_editor.rs  debug.rs  ext.rs  guild.rs  mod.rs  pins.rs
src/config/: guild.rs  mod.rs
src/discord/: custom_commands.rs  discord_connection.rs  event_handler.rs  mod.rs  plugin_message.rs  typing_indicator.rs
src/hooks/: bar_items.rs  command.rs  completions.rs  mod.rs  options.rs  signals.rs
src/twilight_utils/: color.rs  content.rs  dynamic_channel.rs  member_list.rs  mention.rs  mod.rs
src/twilight_utils/ext/: cache_ext.rs  channel_ext.rs  guild_channel_ext.rs  guild_ext.rs  member_ext.rs  message_ext.rs  mod.rs  user_ext.rs
src/utils/: color.rs  flag.rs  format.rs  image.rs  mod.rs
src/weechat2/: mod.rs  renderer.rs  styled_string.rs
src/weechat_utils/: message_manager.rs
tests/: cache_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
