[package]
name = "weechat-discord"
version = "0.3.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[lib]
name = "weecord"
crate-type = ["cdylib"]

[features]
default = ["onig"]

syntax_highlighting = ["syntect"]
images = ["image", "termimage", "hyper", "hyper-rustls"]

pcre = ["parsing/pcre"]
onig = ["parsing/onig"]
weecord-debug = ["accountable-refcell"]

[dependencies.parsing]
path = "parsing"

[dependencies]
anyhow = "1.0.37"
tracing = "0.1.22"
regex = "1.4.3"
chrono = "0.4.19"
once_cell = "1.5.2"
futures = "0.3.9"
parking_lot = "0.11.1"
rand = "0.8.1"
itertools = "0.10.0"

[dependencies.hyper]
version = "0.14.2"
optional = true
default-features = false
features = ["client", "runtime"]

[dependencies.hyper-rustls]
version = "0.22.1"
optional = true
default-features = false
features = ["native-tokio"]

[dependencies.image]
version = "0.23.12"
optional = true

[dependencies.termimage]
package = "libtermimg"
optional = true
git = "https://github.com/terminal-discord/libtermimg"

[dependencies.syntect]
version = "4.5.0"
optional = true
default-features = false
features = ["parsing", "assets", "dump-load", "regex-onig"]

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.accountable-refcell]
version = "0.2.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.2.15"
default_features = false
features = ["fmt", "ansi", "smallvec", "env-filter"]

[dependencies.tokio]
version = "1.0.1"
features = ["rt-multi-thread", "sync", "macros", "time"]


[dependencies.discord-emoji]
git = "https://github.com/terminal-discord/discord-emoji"
branch = "main"

[dependencies.weechat-command-parser]
git = "https://github.com/terminal-discord/weechat-command-parser"


[dependencies.weechat]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"
features = ["async", "unsound"]

[dependencies.weechat-sys]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"

[dependencies.twilight-cache-inmemory]
git = "https://github.com/terminal-discord/twilight"
branch = "next"

[dependencies.twilight-gateway]
git = "https://github.com/terminal-discord/twilight"
branch = "next"

[dependencies.twilight-http]
git = "https://github.com/terminal-discord/twilight"
branch = "next"

[dependencies.twilight-model]
git = "https://github.com/terminal-discord/twilight"
branch = "next"

[dependencies.twilight-mention]
git = "https://github.com/terminal-discord/twilight"
branch = "next"

[dependencies.twilight-permission-calculator]
git = "https://github.com/twilight-rs/permission-calculator"
branch = "trunk"

[patch.crates-io]
twilight-model = { git = "https://github.com/terminal-discord/twilight", branch = "next" }
