[package]
name = "weechat-discord"
version = "0.3.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[workspace]
members = ["parsing", "xtask"]

[lib]
name = "weecord"
crate-type = ["cdylib"]

[features]
default = ["onig"]

syntax_highlighting = ["syntect"]
images = ["image", "term-image", "hyper", "hyper-rustls"]

pcre = ["parsing/pcre"]
onig = ["parsing/onig"]
weecord-debug = ["accountable-refcell"]
tracing_tree = ["tracing-tree"]

[dependencies.parsing]
path = "parsing"

[dependencies]
anyhow = "1.0.40"
tracing = "0.1.26"
regex = "1.5.4"
chrono = "0.4.19"
once_cell = "1.7.2"
futures = "0.3.14"
rand = "0.8.3"
itertools = "0.10.0"
serde_json = "1.0.64"

[dependencies.hyper]
version = "0.14.7"
optional = true
default-features = false
features = ["client", "runtime"]

[dependencies.hyper-rustls]
version = "0.22.1"
optional = true
default-features = false
features = ["native-tokio"]

[dependencies.image]
version = "0.23.14"
optional = true

[dependencies.term-image]
optional = true
git = "https://github.com/Noskcaj19/term-image"

[dependencies.syntect]
version = "4.5.0"
optional = true
default-features = false
features = ["parsing", "assets", "dump-load", "regex-onig"]

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.accountable-refcell]
version = "0.2.1"
optional = true

[dependencies.tracing-tree]
version = "0.1.9"
optional = true

[dependencies.tracing-subscriber]
version = "0.2.18"
default_features = false
features = ["fmt", "ansi", "smallvec", "env-filter"]

[dependencies.tokio]
version = "1.5.0"
features = ["rt-multi-thread", "sync", "macros", "time"]


[dependencies.discord-emoji]
git = "https://github.com/terminal-discord/discord-emoji"
branch = "main"

[dependencies.weechat-command-parser]
git = "https://github.com/terminal-discord/weechat-command-parser"


[dependencies.weechat]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"
features = ["async", "unsound"]

[dependencies.weechat-sys]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"

[dependencies.twilight-cache-inmemory]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-gateway]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-http]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-model]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-mention]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-util]
git = "https://github.com/terminal-discord/twilight"
branch = "main"
features = ["permission-calculator"]
